# server/docs/swagger.yaml
@@ -192,35 +192,27 @@ paths:
       summary: Shows very basic information about this server.
       tags:
       - info
-  /oauth_callback:
+  /oauth2/callback:
     get:
-      description: OAuth callback called after OSM login. Performs the OAuth authentication
-        by getting an OSM access token. See GitHub Repo under '/doc/authentication'
-        for further information.
+      description: OAuth2 callback called after OSM login. Performs the OAuth authentication
+        by getting an OSM access token.
       parameters:
-      - description: The config key sent to the OSM login page.
+      - description: The state-string that was given to the OAuth service.
         in: query
-        name: config
+        name: state
         required: true
         type: string
-      - description: The URL that should be redirected to after authentication
+      - description: The authentication code to retrieve the access token.
         in: query
-        name: redirect
+        name: code
         required: true
         type: string
       responses: {}
       tags:
       - authentication
-  /oauth_login:
+  /oauth2/login:
     get:
-      description: Gets OSM login token and therefore redirects to the OSM Login page.
-        See GitHub Repo under '/doc/authentication' for further information.
-      parameters:
-      - description: The URL that should be redirected to after authentication
-        in: query
-        name: redirect
-        required: true
-        type: string
+      description: Redirects to the OSM Login page to start OSM login with OAuth2.
       responses: {}
       tags:
       - authentication
